--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,13 @@
   --accent: #e7e9fc;
   --pressed: #404bbf;
   --text: #434455;
+  --subtle-text: #8e8f99;
+  --success: #31d0aa;
   --white: #ffffff;
   --global-padding: 156px;
   --font-size-default: 16px;
   --font-weight-medium: 500;
+  --transition-default: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 html {
   scroll-behavior: smooth;
@@ -67,6 +70,23 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.section-header {
+  color: var(--dark);
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  margin-bottom: 72px;
+  text-align: center;
+  text-transform: capitalize;
+}
+.block-header {
+  color: var(--dark);
+  font-size: 20px;
+  font-weight: var(--font-weight-medium);
+  line-height: 1.2;
+  margin-bottom: 8px;
+  letter-spacing: 0.02em;
+}
 /* END General styles */
 
 /* START Header styles */
@@ -95,30 +115,48 @@ img {
   font-weight: var(--font-weight-medium);
   display: block;
   padding: 24px 0;
+  position: relative;
+  transition: var(--transition-default);
+  transition-property: color;
 }
 .nav-contacts {
   font-style: normal;
 }
-.nav-contacts ul {
+.nav-link::after {
+  content: " ";
+  display: none;
+  height: 4px;
+  width: 100%;
+  background-color: var(--pressed);
+  border-radius: 4px;
+  position: absolute;
+  bottom: -1px;
+  transition: var(--transition-default);
+  transition-property: color;
+}
+.nav-link:hover::after {
+  display: block;
+}
+.nav-contacts-list {
   display: flex;
   align-items: center;
 }
-.nav-contacts ul li:not(:last-child) {
+.nav-contacts-list li:not(:last-child) {
   margin-right: 40px;
 }
 .contact-link {
   color: var(--text);
   display: block;
   padding: 24px 0;
+  transition: var(--transition-default);
+  transition-property: display;
 }
+.nav-link:hover,
 .nav-link:active,
 .nav-link:focus,
+.contact-link:hover,
 .contact-link:active,
 .contact-link:focus {
-  color: var(--pressed);
-}
-address ul a:hover,
-.main-navigation ul a:hover {
   color: var(--pressed);
 }
 .logo {
@@ -148,6 +186,15 @@ address ul a:hover,
   max-width: 1440px;
   margin: 0 auto;
   padding: 188px 0;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/hero-banner-desktop.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-heading {
   color: var(--white);
@@ -170,39 +217,34 @@ address ul a:hover,
   min-width: 169px;
   border-radius: 4px;
   cursor: pointer;
+  transition: var(--transition-default);
+  transition-property: background-color;
 }
 .primary-button:hover,
 .primary-button:focus,
 .primary-button:active {
   background-color: var(--pressed);
-  cursor: pointer;
 }
 /* END Hero styles */
 
 /* START Principles section styles */
-.principles ul {
+.principles-cards-grid {
   display: flex;
   gap: 24px;
 }
-.section-header {
-  color: var(--dark);
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  margin-bottom: 72px;
-  text-align: center;
-  text-transform: capitalize;
-}
-.block-header {
-  color: var(--dark);
-  font-size: 20px;
-  font-weight: var(--font-weight-medium);
-  line-height: 1.2;
-  margin-bottom: 8px;
-  letter-spacing: 0.02em;
-}
-.principles li {
+.principles-card {
   max-width: 264px;
+}
+.principles-icon-wrapper {
+  background-color: var(--light);
+  border: 1px solid var(--subtle-text);
+  border-radius: 4px;
+  padding: 24px 0;
+  margin-bottom: 8px;
+}
+.principles-icon {
+  display: block;
+  margin: 0 auto;
 }
 /* END Principles section styles */
 
@@ -224,6 +266,31 @@ address ul a:hover,
 .team-card-content {
   padding: 32px 0;
 }
+.team-card-content .text {
+  margin-bottom: 8px;
+}
+.team-card-icons {
+  display: flex;
+  gap: 24px;
+  padding: 0 16px;
+}
+.team-card-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--primary);
+  border-radius: 50%;
+  transition: var(--transition-default);
+  transition-property: background-color;
+}
+.team-card-icon-wrapper:hover {
+  background-color: var(--pressed);
+}
+.team-card-icon {
+  fill: var(--white);
+}
 /* END Team section styles */
 
 /* START Portfolio section styles */
@@ -232,10 +299,40 @@ address ul a:hover,
   flex-wrap: wrap;
   gap: 48px 24px;
 }
+.portfolio-card {
+  transition: var(--transition-default);
+  transition-property: box-shadow;
+}
+.portfolio-card:hover {
+  box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
+    0px 1px 6px 0px #2e2f4214;
+}
+.portfolio-img-overlay {
+  transition: var(--standart-transition);
+  transition-property: transform;
+}
+.portfolio-card:hover .portfolio-img-overlay {
+  transform: translateY(0);
+}
 .portfolio-card-content {
   border: 1px solid var(--accent);
   border-top: 0;
   padding: 32px 16px;
+}
+.portfolio-card-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-img-overlay {
+  display: block;
+  position: absolute;
+  inset: 0;
+  padding: 40px 32px;
+  background-color: var(--primary);
+  transform: translateY(300px);
+}
+.portfolio-img-overlay-text {
+  color: var(--light);
 }
 /* END Portfolio section styles */
 
@@ -245,11 +342,41 @@ address ul a:hover,
   color: var(--light);
   padding: 100px 0;
 }
+.footer .container {
+  display: flex;
+}
 .footer .logo {
   display: inline-block;
   margin-bottom: var(--font-size-default);
 }
 .footer .text {
   max-width: 264px;
+}
+.logo-content {
+  margin-right: 120px;
+}
+.social-media .text {
+  margin-bottom: 16px;
+}
+.social-media-icons {
+  display: flex;
+  gap: 16px;
+}
+.social-media-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--primary);
+  border-radius: 50%;
+  transition: var(--transition-default);
+  transition-property: background-color;
+}
+.social-media-icon-wrapper:hover {
+  background-color: var(--success);
+}
+.social-media-icon {
+  fill: var(--white);
 }
 /* END Footer styles */
