--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ img {
 /* START Header styles */
 .header {
   border-bottom: 1px solid var(--accent);
-  box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08),
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header .container {
