--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(/images/hero-banner-desktop.jpg);
+    url(./images/hero-banner-desktop.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
