--- a/css/style.css
+++ b/css/style.css
@@ -272,24 +272,29 @@ img {
 }
 .team-card-icons {
   display: flex;
+  justify-content: center;
   gap: 24px;
-  padding: 0 16px;
 }
 .team-card-icon-wrapper {
+  width: 40px;
+  height: 40px;
+}
+.icon-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
   background-color: var(--primary);
   border-radius: 50%;
   transition: background-color var(--transition-default);
 }
-.team-card-icon-wrapper:hover {
+.icon-link:hover,
+.icon-link:focus {
   background-color: var(--pressed);
 }
 .team-card-icon {
-  fill: var(--white);
+  fill: var(--light);
 }
 /* END Team section styles */
 
