--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ img {
   color: var(--text);
   display: block;
   padding: 24px 0;
-  transition: display var(--transition-default);
+  transition: color var(--transition-default);
 }
 .nav-link:hover,
 .nav-link:active,
@@ -311,11 +311,8 @@ img {
   box-shadow: 0px 2px 1px 0px #2e2f4214, 0px 1px 1px 0px #2e2f4229,
     0px 1px 6px 0px #2e2f4214;
 }
-.portfolio-img-overlay {
-  transition: transform var(--standart-transition);
-}
 .portfolio-card:hover .portfolio-img-overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 .portfolio-card-content {
   border: 1px solid var(--accent);
@@ -329,10 +326,17 @@ img {
 .portfolio-img-overlay {
   display: block;
   position: absolute;
-  inset: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: var(--font-size-default);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--light);
   padding: 40px 32px;
   background-color: var(--primary);
-  transform: translateY(300px);
+  transform: translateY(100%);
+  transition: transform var(--standart-transition);
 }
 .portfolio-img-overlay-text {
   color: var(--light);
